# Strategify

./: .gitignore  CLOJURE_SETUP.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  codecov.yml  minimal.geojson  pyproject.toml  requirements.txt  ruff.json  ruff_output.txt  run.bat  super_sprint_plan.md  verify_phase14.py  verify_phase9.py
.context/: .gitignore
.github/: dependabot.yml
.github/workflows/: ci.yml
.kilo/skills/: README.md
.kilo/skills/skill-analyzer/: SKILL.md
.kilo/skills/strategify-data-collection/: SKILL.md
.kilo/skills/strategify-debugging/: SKILL.md
.kilo/skills/strategify-game-theory/: SKILL.md
.kilo/skills/strategify-osint-analysis/: SKILL.md
.kilo/skills/strategify-rl-development/: SKILL.md
.kilo/skills/strategify-scenario-runner/: SKILL.md
.kilo/skills/strategify-test-coverage/: SKILL.md
.kilo/skills/strategify-visualization/: SKILL.md
docs/: algorithms.md  api-reference.md  architecture.md
docs/plans/: 2026-03-27-research-library-integration.md  2026-04-08-feature-enhancements.md
examples/basic_crisis_scenario/: run.py
examples/plugin_example/: README.md  media_agent.py  media_game.py
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Navbar.css  Navbar.jsx
frontend/src/hooks/: useSimulation.js
frontend/src/pages/: Analysis.css  Analysis.jsx  Dashboard.css  Dashboard.jsx  Map.css  Map.jsx  Simulation.css  Simulation.jsx
middle_east_output/: diplomacy.gexf  map.html  network.html  timeline.html
reports 3rd party/: implementation_plan.md  task.md  walkthrough.md
scripts/: fetch_real_world.py  geopolitical_theories.py  init_with_real_data.py  middle_east_scenario.py  run_middle_east.py  test_geo_integration.py  tournament_runner.py
scripts/verification/: verify_phase10.py  verify_phase12.py  verify_phase13.py  verify_phase6.py  verify_phase7.py  verify_phase8.py
strategify/: __init__.py
strategify-clj/: project.clj
strategify-clj/src/strategify/: core.clj
strategify/agents/: __init__.py  base.py  cognitive_actor.py  economic_analyst.py  escalation.py  factions.py  military.py  non_state.py  organization.py  state_actor.py
strategify/analysis/: __init__.py  alerts.py  alliance_forecast.py  calibration.py  causal.py  communities.py  comparison.py  counterfactual.py  dashboard.py  forecasting.py  leverage.py  optimization.py  sensitivity.py  strategic_risk.py  strategy_recommend.py  timeseries.py  war_game.py
strategify/config/: __init__.py  cli.py  rag_briefing.py  scenarios.py  settings.py
strategify/dynamics/: __init__.py
strategify/economics/: __init__.py  econometrics.py
strategify/game_theory/: __init__.py  coalition.py  crisis_games.py  dynamic.py  normal_form.py
strategify/geo/: __init__.py  adjacency.py  loader.py  middle_east.geojson  real_data.py  real_world.geojson  regions_demo.geojson
strategify/geo/scenarios/: arms_race.json  default.json  detente.json  middle_east.json
strategify/logic/: __init__.py  bridge.py  clj.py  engine.py  hawk_dove.pl  hawk_dove.py  traits.pl  types.py
strategify/osint/: __init__.py  adapters.py  cache.py  features.py  pipeline.py  sources.py
strategify/plugins/: __init__.py
strategify/reasoning/: __init__.py  adversary.py  diplomacy.py  diplomacy_phase3.py  economics.py  governance.py  human_in_loop.py  influence.py  llm.py  multiscale.py  propaganda.py  spatial.py  strategies.py  temporal.py
strategify/rl/: __init__.py  environment.py  evaluation.py  hybrid_ai.py  tournament.py  training.py
strategify/sim/: __init__.py  conflict.py  environment.py  health.py  model.py  persistence.py  run_mesa_geo_server.py  run_mesa_server.py  runner.py
strategify/theory/: __init__.py
strategify/viz/: __init__.py  choropleth.py  dashboard.py  export.py  maps.py  networks.py  reports.py  status.py  timeline.py
strategify/web/: __init__.py  api.py  dashboard.py  server.py
tests/: conftest.py  test_analysis_modules.py  test_audit_fixes.py  test_causal.py  test_choropleth.py  test_coalition.py  test_communities.py  test_comparison.py  test_crisis_games.py  test_dashboard.py  test_diplomacy.py  test_diplomacy_phase3.py  test_dynamic_integration.py  test_dynamics.py  test_economics.py  test_escalation.py  test_export.py  test_game_theory.py  test_geo_loader.py  test_health.py  test_influence.py  test_integration.py  test_model.py  test_more_analysis.py  test_multiscale.py  test_optimization.py  test_organization.py  test_osint.py  test_osint_modules.py  test_osint_pipeline.py  test_persistence.py  test_phase11.py  test_phase1_verification.py  test_phase3.py  test_phase4.py  test_phase5.py  test_plugins.py  test_propaganda.py  test_rl_env.py  test_rl_environment.py  (+12 more)
tests/fixtures/: gdelt_response.json  worldbank_response.json
