[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "strategify"
version = "0.5.0"
description = "Python framework for geopolitical simulations using agent-based modeling, game theory, and geospatial data"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "SpectreDeath", email = "spectredeath@github.com"},
]
keywords = ["geopolitical-simulation", "agent-based-modeling", "game-theory", "mesa", "osint"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.11"
dependencies = [
    "mesa==2.3.4",
    "mesa-geo>=0.6.0",
    "nashpy>=0.0.43",
    "pandas>=2.0",
    "geopandas>=0.14",
    "shapely>=2.0",
    "networkx>=3.2",
    "axelrod>=4.14",
    "libpysal>=4.8",
    "esda>=2.5",
    "vaderSentiment>=3.3",
    "folium>=0.15",
    "pyvis>=0.3",
    "matplotlib>=3.8",
    "Pillow>=10.0",
]

[project.optional-dependencies]
analysis = [
    "statsmodels>=0.14",
    "SALib>=1.4",
    "cdlib>=0.3",
    "pymoo>=0.6",
]
rl = [
    "pettingzoo>=1.24",
    "gymnasium>=1.0",
]
web = [
    "streamlit>=1.30",
    "plotly>=5.18",
    "matplotlib>=3.8",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.2",
]
logic = [
    "pyswip>=0.2",
    "memtext>=0.5.0",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.4",
    "mkdocstrings[python]>=0.24",
]

[project.scripts]
strategify = "strategify.sim.run_mesa_geo_server:main"
strategify-dashboard = "strategify.web.dashboard:run_dashboard"
strategify-scenario = "strategify.config.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=strategify --cov-report=term-missing --cov-fail-under=70 --timeout=20"
filterwarnings = [
    "ignore::DeprecationWarning:mesa.*:",
    "ignore::DeprecationWarning:libpysal.*:",
    "ignore::FutureWarning:geopandas.*:",
]

[tool.coverage.run]
source = ["strategify"]
omit = [
    "*/sim/run_mesa_server.py",
    "*/sim/run_mesa_geo_server.py",
    "*/web/dashboard.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501", "F821", "W293"]
exclude = ["strategify/viz/dashboard.py", "strategify/viz/timeline.py"]

[tool.setuptools.packages.find]
include = ["strategify*"]
